# faberlic_chat_bot

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
models_api/: Dockerfile  faq.json  main.py  pyproject.toml
models_api/api/: api.py
models_api/api/endpoints/: faq.py  health.py  intents.py  rag.py  slots.py
models_api/api/schemas/: faq.py  intents.py  rag.py  slots.py
models_api/models/: answer_generator.py  base_openai_model.py  catalog.xlsx  configs.py  dataclasses.py  intent_classifier.py  products_retriever.py  question_classifier.py  slots_filler.py  utils.py
stats/: config.yaml
stats/docker/: dockerfile_stats  entrypoint_stats.sh
stats/otel/: otelcol-config-extras.yml  otelcol-config.yml
tg_bot/: .env.template  Dockerfile  context.py  main.py  pyproject.toml  telemetry.py
tg_bot/api/: faq.py  intents.py  search.py  slots.py
tg_bot/dialog_graph/: conditions.py  consts.py  fallbacks.py  processing.py  responses.py  script.py
tg_bot/pipeline_services/: pre_services.py
tg_bot/tests/: pytest.ini  test_happy_path.py
