[tool.poetry]
name = "faberlic-chat-bot"
version = "0.1.0"
description = ""
authors = ["starminalush <alica154323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.7.0"


[tool.poetry.group.test.dependencies]
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["models_api", 'tg_bot']


[tool.black]
line-length=120

[tool.flake8]
max-line-length=120
