[tool.poetry]
name = "models_api"
version = "0.1.0"
description = ""
authors = ["starminalush <alica154323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
transformers = "^4.39.3"
uvicorn = "^0.29.0"
torch = "^2.2.2"
openai = "0.27.8"
openai-function-call = "^0.2.6"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
#fuzzywuzzy = "^0.18.0"
#pymorphy2 = "^0.9.1"
sentence-transformers = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
